fix: change hover on mobile to click; swiper models

--- a/src/assets/components/model-card/model-card.scss
+++ b/src/assets/components/model-card/model-card.scss
@@ -1,7 +1,6 @@
 .model-card {
   position: relative;
   cursor: pointer;
-  max-width: 270px;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0);
   perspective: 1000px;
